<resources>
    <string name="app_name">优了个秀</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="author">作者：%s</string>
    <string name="input_login_password">请输入登录密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="qReg">快速注册</string>
    <string name="findLoginPassword">找回密码</string>
    <string name="hint_user_name">请输入您的手机号码</string>

</resources>
