<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:background="@color/page_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="68dp"
        android:layout_marginTop="62dp"
        android:src="@mipmap/logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_phone"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="请输入您的手机号码"
        android:paddingLeft="@dimen/dp_40">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reg_user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawablePadding="@dimen/dp_40"
            android:drawableStart="@mipmap/ic_username"
            android:gravity="center_vertical"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:textSize="@dimen/sp_13" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/dividingLineColor" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_pwd"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/input_login_password"
        android:paddingLeft="@dimen/dp_40">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reg_user_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/ic_password"
            android:drawablePadding="@dimen/dp_40"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLength="24"
            android:maxLines="1"
            android:textSize="@dimen/sp_13" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_86"
        android:background="@drawable/blue_yuanjiao_btn_bg"
        android:clickable="true"
        android:text="@string/login"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_11">

        <TextView
            android:id="@+id/tv_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingBottom="@dimen/dp_8"
            android:paddingLeft="@dimen/dp_8"
            android:paddingRight="@dimen/dp_8"
            android:text="@string/qReg"
            android:gravity="center"
            android:textColor="@color/textColor_88"
            android:textSize="@dimen/sp_13"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tv_find_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_8"
            android:paddingLeft="@dimen/dp_8"
            android:paddingRight="@dimen/dp_8"
            android:text="@string/findLoginPassword"
            android:textColor="@color/textColor_88"
            android:textSize="@dimen/sp_13" />
    </RelativeLayout>
</LinearLayout>